# advent

./: .gitignore
2018/five/: one.go  two.go
2018/four/: one.go  two.go
2018/one/: one.go  two.go
2018/three/: one.go  two.go
2018/two/: one.go  two.go
2019/five/: one.go
2019/four/: input.txt  one.go
2019/one/: input.txt  one.go  two.go
2019/three/: input.txt  one.go
2019/two/: input.txt  one.go  two.go
2021/: CMakeLists.txt
2021/lib/: CMakeLists.txt
2021/lib/array/: CMakeLists.txt  array.c  array.h
2021/lib/characters/: CMakeLists.txt  characters.c  characters.h
2021/lib/io/: CMakeLists.txt  io.c  io.h
2021/lib/util/: CMakeLists.txt  util.c  util.h
2021/src/: CMakeLists.txt
2021/src/five/: CMakeLists.txt  five.c
2021/src/four/: CMakeLists.txt  four.c
2021/src/one/: CMakeLists.txt  one.c
2021/src/three/: CMakeLists.txt  input.txt  three.c
2021/src/two/: CMakeLists.txt  two.c
2023/: README.md  bun.lockb  package.json  tsconfig.json
2023/solutions/: 1.ts  10.ts  11.ts  12.ts  2.ts  3.ts  4.ts  5.ts  6.ts  7.ts  8.ts  9.ts
2024/: README.md  bun.lockb  package.json  solve.ts
2024/solutions/: 1.ts  10.ts  11.ts  12.ts  13.ts  2.ts  3.ts  4.ts  5.ts  6.ts  7.ts  8.ts  9.ts
